--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </section>
 
-        <section class="container">
+        <section class="container mb-5">
             <h2>My Meals</h2>
             <div id="meal-container" class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
                 
